--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1992493_80gqv8kbzrg.css" />
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_1992493_80gqv8kbzrg.css" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
